ui_test/parser/fail/cannot_call_cast.camp
fn main() {
    1 as i32()
}